# shading

./: CMakeLists.txt  README.md
CS248/: CMakeLists.txt
CS248/docs/html/: _c_s248_8h_source (Sky_MBP's conflicted copy 2015-10-06).html  annotated (Sky_MBP's conflicted copy 2015-10-06).html  base64_8h_source (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_color (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_color-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_complex (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_complex-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_matrix3x3 (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_matrix3x3-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_matrix4x4 (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_matrix4x4-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_o_s_d_text (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_o_s_d_text-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_renderer (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_renderer-members (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_vector2_d (Sky_MBP's conflicted copy 2015-10-06).html  class_c_s248_1_1_vector2_d-members (Sky_MBP's conflicted copy 2015-10-06).html  (+34 more)
CS248/examples/: CMakeLists.txt
CS248/src/: CMakeLists.txt  osdtext.cpp  viewer.cpp
media/: shader.frag  shader.vert  shader_shadow.frag  shader_shadow.vert  shadow_pass.frag  shadow_pass.vert  shadow_pass_debug.vert  shadow_viz.frag  shadow_viz.vert
media/debug/: debug.json
media/spheres/: spheres.json  spheres_shadow.json
media/teapot/: teapot.json
src/: CMakeLists.txt  application.cpp  application.h  bbox.cpp  bbox.h  camera.cpp  camera.h  gl_resource_manager.cpp  gl_resource_manager.h  gl_utils.cpp  gl_utils.h  main.cpp  shader.cpp  shader.h
src/collada/: camera_info.cpp  camera_info.h  collada.cpp  collada.h  collada_info.h  light_info.cpp  light_info.h  pattern_info.cpp  pattern_info.h  polymesh_info.cpp  polymesh_info.h  sphere_info.cpp  sphere_info.h
src/dynamic_scene/: #mesh.cpp#  ambient_light.h  area_light.h  directional_light.h  mesh.cpp  mesh.cpp~  mesh.h  mesh.h~  point_light.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spot_light.h
src/shader/: debug.frag  debug.vert  shader.frag  shader.vert  shader_shadow.frag  shader_shadow.vert  shadow_pass.vert
src/static_scene/: light.cpp  light.h  object.h  primitive.h  scene.h  sphere.h
(+4 files in other folders)
